welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: not found: value versLavant
  if (versLavant){
      ^Program:4: error: type mismatch;
 found   : Unit
 required: Int
    for (i <- 1 to nbPas){avance()}
           ^Program:3: error: type mismatch;
 found   : Unit
 required: Int
  if (versLavant){
  ^