welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean): Int = {
  if (versLavant){
    for (i <- 1 to nbPas){avance()}
  }  
}